Improved linkify function - doesn't falsely match email addresses. Also fixes html entities.
Also brought relative time to match Twitter.com

--- a/test/test.html
+++ b/test/test.html
@@ -74,7 +74,7 @@
           <p><a href="http://twitter.com/rem">If you can't wait - check out what I've been twittering</a></p>
         </div>
 
-        <h2>Template based with 1 tweet</h2>
+        <h2>Template based with 1 tweet (linkify disabled)</h2>
 
         <div class="twitters" id="johnsTweets">
           <p>Please wait while my tweets load <img src="spinner.gif"></p>
