Number of fixes to ify, and fixed date parsing in Opera and 12AM issue

--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,7 @@
         count: 10, 
         withFriends: true,
         ignoreReplies: false,
-        newwindow: true,
+        newwindow: true
     });
     
     getTwitters('remysTweets2', {
