ify now supports lists, such as @nuxnix/uk-twitterati and linking the entire list

--- a/test/ify.html
+++ b/test/ify.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <div id="log"></div>
-<script src="../src/twitter.js"></script>
+<script src="../src/ify.js"></script>
 <script>
 log('RB @TrainWreckRadio: "@AmyisImaginary Lead your heart away........ are YOU still wide awake?" TY ♫ http://blip.fm/~c9s82');
 log('http://bit.ly/CONg1: "dl: what is it good for?" (@codepo8 @rossbruniges - would love a response!)');
 log("@sazp $('#clickable-element-id').click(function () { $('#other-element-id').removeClass('old').addClass('new'); }) - easy! ;-)");
 log('New #WP blog http://tinyurl.com/nlphxt Tips for trolls, NINtards, eStalkers, etc #FuckAUF ♫ http://blip.fm/~c9s5g');
+log('List of Twitter developers in the @WiredUK photo: @nuxnix/uk-twitterati - @nuxnix Is organising next few Twitter Developer Nest\'s (@devnest)');
 
 function log(s) {
   document.querySelector('#log').innerHTML += '<p>' + ify.clean(s) + '</p>';
