OhioLINK-specific changes for production purposes.

--- a/test/test.html
+++ b/test/test.html
@@ -43,7 +43,7 @@
     	ignoreReplies: true,
     	ignoreOlderThan: 36*60*60,
     	stopIfSeen: 'journals',
-    	cookieDomain: 'ohiolink.edu',
+    	cookieDomain: 'dltj.org',
     	cookieRefresh: 5
     });
     </script>
@@ -94,7 +94,7 @@
 
 	<h2>OhioLINK Test Template</h2>
 	
-	<div class="twitters" id="ohiolinktest">
+	<div class="twitters" id="ohiolinkstatus">
 	  <p>Something Goes Here</p>
 	</div>
     </div>
